[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meridian-hotspot-stabilizer"
version = "0.2.1"
description = "macOS hotspot bandwidth stabilizer using PF dummynet shaping."
requires-python = ">=3.11"
authors = [{ name = "Meridian Internet" }]
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
meridian-stabilizer = "meridian_stabilizer.cli:main"

[tool.setuptools.packages.find]
include = ["meridian_stabilizer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
